--- a/app/src/main/res/layout/activity_case_details.xml
+++ b/app/src/main/res/layout/activity_case_details.xml
@@ -6,13 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".Activity.CaseDetailsActivity">
 
+    <include
+        android:id="@+id/toolbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/toolbar_layout" />
+
     <TextView
         android:id="@+id/case_details_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:textSize="16sp"
         />
