--- a/app/src/main/res/layout/alert_fragment.xml
+++ b/app/src/main/res/layout/alert_fragment.xml
@@ -5,6 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+    <include
+        android:id="@+id/toolbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/toolbar_layout" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
