--- a/app/src/main/res/layout/case_fragment.xml
+++ b/app/src/main/res/layout/case_fragment.xml
@@ -2,21 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <include
+        android:id="@+id/toolbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/toolbar_layout" />
 
-    <ImageView
-        android:layout_width="28dp"
-        android:layout_height="28dp"
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:id="@+id/add_case_button"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/add_hearing_icon"/>
-
+        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
+        android:text="Add Case"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="#F7CD76"
+/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="16dp"
         android:id="@+id/recycler_case_view"
         app:layout_constraintTop_toBottomOf="@+id/add_case_button"
         android:layout_marginTop="20dp"/>
