--- a/app/src/main/res/layout/add_hearing_fragment.xml
+++ b/app/src/main/res/layout/add_hearing_fragment.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:padding="16dp"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
         android:id="@+id/radio_group_category"
         app:layout_constraintTop_toBottomOf="@+id/text_select_category">
 
@@ -46,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
+            android:maxEms="5"
             android:layout_marginLeft="10dp"
             android:text="Criminal DailyList"/>
 
@@ -55,7 +57,9 @@
             android:textSize="18sp"
             android:layout_marginLeft="10dp"
             android:text="Other"/>
+
     </RadioGroup>
+
 
     <EditText
         android:id="@+id/add_judges"
