--- a/app/src/main/res/layout/task_dialog.xml
+++ b/app/src/main/res/layout/task_dialog.xml
@@ -35,6 +35,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Select Date"
+        android:editable="false"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_task_desc" />
 
