--- a/app/src/main/res/layout/add_hearing_fragment.xml
+++ b/app/src/main/res/layout/add_hearing_fragment.xml
@@ -6,14 +6,13 @@
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditText
-        android:id="@+id/edit_select_case"
+    <Spinner
+        android:id="@+id/case_no_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/editext_rounded_shape"
-        android:hint="Select Case"
-        android:editable="false"
+        android:inputType="number"
+        android:autofillHints="Choose Case number"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +21,7 @@
         android:layout_height="wrap_content"
         android:text="Select Category"
         android:id="@+id/text_select_category"
-        app:layout_constraintTop_toBottomOf="@+id/edit_select_case"
+        app:layout_constraintTop_toBottomOf="@+id/case_no_spinner"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -34,16 +33,18 @@
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:gravity="center_vertical"
-        android:id="@+id/radio_group_category"
+        android:id="@+id/radio_group_category_hearing"
         app:layout_constraintTop_toBottomOf="@+id/text_select_category">
 
         <RadioButton
+            android:id="@+id/civil_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="Civic"/>
+            android:text="Civil"/>
 
         <RadioButton
+            android:id="@+id/criminal_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -52,6 +53,7 @@
             android:text="Criminal DailyList"/>
 
         <RadioButton
+            android:id="@+id/other_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -69,7 +71,7 @@
         android:background="@drawable/editext_rounded_shape"
         android:hint="Add Judges"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/radio_group_category" />
+        app:layout_constraintTop_toBottomOf="@+id/radio_group_category_hearing" />
 
     <Button
         android:layout_width="28dp"
@@ -80,16 +82,29 @@
         app:layout_constraintBottom_toBottomOf="@id/add_judges"
         android:background="@drawable/add_hearing_icon"/>
 
-    <EditText
+    <TextView
         android:id="@+id/edit_hearing_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:inputType="date"
+        android:textSize="20sp"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Select Hearing Date"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/add_judges" />
+
+    <Button
+        android:id="@+id/hearing_continue_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/continue_text"
+        android:layout_marginTop="20dp"
+        android:textAllCaps="false"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rounded_yellow_background"
+        app:layout_constraintTop_toBottomOf="@+id/edit_hearing_date"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
