--- a/app/src/main/res/layout/case_fragment.xml
+++ b/app/src/main/res/layout/case_fragment.xml
@@ -25,7 +25,7 @@
 />
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:padding="16dp"
         android:id="@+id/recycler_case_view"
         app:layout_constraintTop_toBottomOf="@+id/add_case_button"
