--- a/app/src/main/res/layout/hearing_fragment_recyclerview.xml
+++ b/app/src/main/res/layout/hearing_fragment_recyclerview.xml
@@ -13,15 +13,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/date_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/Bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textSize="14dp"
-            android:text="Date (Today)"/>
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,13 +27,27 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_blue_background"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="5dp"
+        android:text="20 May 19"
+        android:id="@+id/hearing_date"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         app:cardCornerRadius="4dp"
-        app:layout_constraintTop_toTopOf="@+id/day_date_layout">
+        app:layout_constraintTop_toBottomOf="@+id/hearing_date">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -49,77 +55,50 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/state_text"
+                android:id="@+id/hearing_text"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="State"
+                android:text="Hearing"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/state_text_name"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
-                android:text="Vashi Police Station"
-                app:layout_constraintLeft_toRightOf="@+id/state_text"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/vs_text"
+                android:id="@+id/room_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="VS"
+                android:text="Room :"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/state_text" />
+                app:layout_constraintTop_toBottomOf="@id/hearing_text" />
 
             <TextView
-                android:id="@+id/vs_text_name"
-                android:textColor="@color/black"
+                android:id="@+id/room_text_name_hearing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
-                android:text="Gangaram Ramsingh Verma"
-                app:layout_constraintLeft_toRightOf="@+id/vs_text"
-                app:layout_constraintTop_toBottomOf="@+id/state_text" />
+                app:layout_constraintLeft_toRightOf="@+id/room_text"
+                app:layout_constraintTop_toBottomOf="@+id/hearing_text" />
 
             <TextView
-                android:id="@+id/t1"
+                android:id="@+id/judge_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="R.C.C./1100095/2002"
+                android:text="Judge(s):"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/vs_text" />
+                app:layout_constraintTop_toBottomOf="@id/room_text" />
 
             <TextView
-                android:id="@+id/t2"
+                android:id="@+id/judge_text_name_hearing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:text="Civil Court Junior Division, Vashi"
-                app:layout_constraintLeft_toRightOf="@+id/t1"
-                app:layout_constraintTop_toBottomOf="@id/vs_text" />
+                app:layout_constraintLeft_toRightOf="@+id/judge_text"
+                app:layout_constraintTop_toBottomOf="@id/room_text" />
 
-            <TextView
-                android:id="@+id/t3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="12th Jt. C.j.j.d And J.m.f.c Vashi Navi Mumbai"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/t1" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Last Buisiness Details"
-                android:textColor="@color/blue"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/t3" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
