--- a/app/src/main/res/layout/hearing_fragment_recyclerview.xml
+++ b/app/src/main/res/layout/hearing_fragment_recyclerview.xml
@@ -36,6 +36,7 @@
         android:paddingRight="10dp"
         android:paddingBottom="5dp"
         android:text="20 May 19"
+        android:layout_marginTop="10dp"
         android:id="@+id/hearing_date"
         android:textColor="@color/white"
         android:textSize="16sp"
