--- a/app/src/main/res/layout/appointment_dialog.xml
+++ b/app/src/main/res/layout/appointment_dialog.xml
@@ -28,17 +28,17 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_appointment_title" />
 
-    <EditText
+    <TextView
         android:id="@+id/edit_appointment_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:editable="false"
+        android:inputType="date"
+        android:textSize="20sp"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Select Date"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_appointment_desc" />
-
     <EditText
         android:id="@+id/edit_apt_client_name"
         android:layout_width="match_parent"
