--- a/app/src/main/res/layout/task_dialog.xml
+++ b/app/src/main/res/layout/task_dialog.xml
@@ -28,7 +28,7 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_task_title" />
 
-    <EditText
+    <TextView
         android:id="@+id/edit_task_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
