--- a/app/src/main/res/layout/tab_fragment.xml
+++ b/app/src/main/res/layout/tab_fragment.xml
@@ -21,15 +21,6 @@
     <ImageView
         android:layout_width="25dp"
         android:layout_height="25dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/whatsapp_img"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/notice_icon"/>
-
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
         android:id="@+id/whatsapp_img"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -45,6 +36,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/profile_img"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
         android:src="@drawable/profile_icon"/>
 
 
