--- a/app/src/main/res/layout/hearing_fragment_recyclerview.xml
+++ b/app/src/main/res/layout/hearing_fragment_recyclerview.xml
@@ -19,9 +19,12 @@
             android:layout_height="wrap_content"
             style="@style/Bold"
             android:padding="5dp"
+            android:textColor="@color/white"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:background="@drawable/rounded_blue_background"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:textSize="12sp"
             />
 
@@ -100,21 +103,21 @@
 
             <TextView
                 android:id="@+id/court_name_text_hearing"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="18dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 app:layout_constraintLeft_toRightOf="@+id/case_no_hearing"
                 app:layout_constraintTop_toBottomOf="@id/vs_text" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Last Buisiness Details"
-                android:textColor="@color/blue"
+                android:id="@+id/judge_name_text_hearing"
+                android:layout_width="0dp"
+                android:layout_height="18dp"
+                android:layout_marginTop="5dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/court_name_text_hearing" />
+                app:layout_constraintTop_toBottomOf="@id/court_name_text_hearing" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
