--- a/app/src/main/res/layout/hearing_fragment.xml
+++ b/app/src/main/res/layout/hearing_fragment.xml
@@ -24,4 +24,16 @@
         android:layout_marginTop="10dp"
         android:paddingBottom="56dp"
         app:layout_constraintTop_toBottomOf="@+id/add_hearing_button"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Please Click On Plus Button \n \t \t To Add Hearings.."
+        android:textSize="20sp"
+        android:id="@+id/hearings_empty_text"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
