--- a/app/src/main/res/layout/add_hearing_fragment.xml
+++ b/app/src/main/res/layout/add_hearing_fragment.xml
@@ -73,14 +73,14 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/radio_group_category_hearing" />
 
-    <Button
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:id="@+id/add_judge_button"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/add_judges"
-        app:layout_constraintBottom_toBottomOf="@id/add_judges"
-        android:background="@drawable/add_hearing_icon"/>
+<!--    <Button-->
+<!--        android:layout_width="28dp"-->
+<!--        android:layout_height="28dp"-->
+<!--        android:id="@+id/add_judge_button"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/add_judges"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/add_judges"-->
+<!--        android:background="@drawable/add_hearing_icon"/>-->
 
     <TextView
         android:id="@+id/edit_hearing_date"
