--- a/app/src/main/res/layout/hearing_fragment.xml
+++ b/app/src/main/res/layout/hearing_fragment.xml
@@ -28,8 +28,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please Click On Plus Button \n \t \t To Add Hearings.."
+        android:text="Please Click On Plus Button \n To Add Hearings.."
         android:textSize="20sp"
+        android:fontFamily="@font/arvo"
         android:id="@+id/hearings_empty_text"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
