--- a/app/src/main/res/layout/timeline_fragment.xml
+++ b/app/src/main/res/layout/timeline_fragment.xml
@@ -10,5 +10,17 @@
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Please add hearing for the case"
+       android:textSize="20sp"
+       android:fontFamily="@font/arvo"
+       android:id="@+id/timeline_empty_text"
+       android:visibility="gone"
+       app:layout_constraintTop_toTopOf="parent"
+       android:layout_marginTop="20dp"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
