--- a/app/src/main/res/layout/add_case_fragment1.xml
+++ b/app/src/main/res/layout/add_case_fragment1.xml
@@ -78,7 +78,7 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/edit_party2" />
 
-    <EditText
+    <TextView
         android:id="@+id/edit_select_team"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -86,9 +86,33 @@
         android:inputType="textPersonName"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Select Team"
+        android:editable="false"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/edit_lawyer" />
 
+    <TextView
+        android:id="@+id/selectedTeamText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Selected Team : "
+        android:visibility="gone"
+        android:textSize="20sp"
+        android:textColor="@color/blue"
+        android:background="@drawable/editext_rounded_shape"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/edit_select_team" />
+
+
+    <TextView
+        android:id="@+id/edit_case_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/editext_rounded_shape"
+        android:hint="Select Hearing Date"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/selectedTeamText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -100,16 +124,6 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"/>
-
-    <TextView
-        android:id="@+id/edit_case_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/editext_rounded_shape"
-        android:hint="Select Hearing Date"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/edit_select_team" />
 
 
     <RadioGroup
