--- a/app/src/main/res/layout/task_dialog.xml
+++ b/app/src/main/res/layout/task_dialog.xml
@@ -50,6 +50,20 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_task_date" />
 
+
+    <TextView
+        android:id="@+id/selectedTeamText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Selected Team : "
+        android:visibility="gone"
+        android:textSize="20sp"
+        android:textColor="@color/blue"
+        android:background="@drawable/editext_rounded_shape"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/edit_task_assignto" />
+
     <EditText
         android:id="@+id/edit_add_task_note"
         android:layout_width="match_parent"
@@ -59,7 +73,7 @@
         android:hint="Add Note Here.."
         android:inputType="text"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/edit_task_assignto" />
+        app:layout_constraintTop_toBottomOf="@+id/selectedTeamText" />
 
     <Button
         android:id="@+id/button_save"
