--- a/app/src/main/res/layout/task_dialog.xml
+++ b/app/src/main/res/layout/task_dialog.xml
@@ -39,7 +39,7 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_task_desc" />
 
-    <EditText
+    <TextView
         android:id="@+id/edit_task_assignto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
